[#1] Fixed Gitian Builds, changed addresses starting letter and added a proper spork key
Gitian now has proper links for building, a skeleton was left for a later implementation of signing.

Addresses will now start with either c or 9 as in testnet privkeys. This is the quickest workaround to get it changed.

A proper spork key was added and given to who i was contacted by. I still hold a copy myself. Sporks are now enabled

--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -29,8 +29,8 @@ packages:
 - "python"
 reference_datetime: "2015-06-01 00:00:00"
 remotes:
-- "url": "https://github.com/eazy-project/eazy.git"
-  "dir": "eazy"
+- "url": "https://github.com/EAZYCommunityNode/EZY.git"
+  "dir": "EZY"
 files: []
 script: |
 
@@ -114,7 +114,7 @@ script: |
   chmod +x ${WRAP_DIR}/${prog}
   done
 
-  cd eazy
+  cd EZY
   BASEPREFIX=`pwd`/depends
   # Build dependencies for each host
   for i in $HOSTS; do
